--- a/src/App.css
+++ b/src/App.css
@@ -203,3 +203,268 @@
 }
 
 /* --- */
+
+path:visited {
+	fill: #FFFFFF;
+}
+
+a path{
+	cursor: pointer;
+	transition: all .1s ease-out;
+}
+
+a:hover path {
+	fill: #f40ef0;
+}
+
+a-active path,
+a:active path {
+	fill: green;
+}
+
+a:before path {
+	fill: green;
+}
+
+a-active:before path,
+a:active:before path {
+	fill: green;
+}
+
+a:checked path {
+	fill: green;
+}
+
+a:target path {
+	fill: green;
+}
+
+path:target {
+	fill: green;
+}
+
+path:focus {
+	fill: orange;
+	outline: none;
+}
+
+path:country {
+	fill: yellow;
+}
+
+/*---*/
+
+.slide-rotate-hor-b-bck {
+	-webkit-animation: slide-rotate-hor-b-bck 2s cubic-bezier(0.680, -0.550, 0.265, 1.550) reverse both;
+	        animation: slide-rotate-hor-b-bck 2s cubic-bezier(0.680, -0.550, 0.265, 1.550) reverse both;
+}
+
+@-webkit-keyframes slide-rotate-hor-b-bck {
+	0% {
+	  -webkit-transform: translateY(0) translateZ(0) rotateX(0deg);
+			  transform: translateY(0) translateZ(0) rotateX(0deg);
+	  -webkit-transform-origin: bottom center;
+			  transform-origin: bottom center;
+	}
+	100% {
+	  -webkit-transform: translateY(150px) translateZ(-230px) rotateX(90deg);
+			  transform: translateY(150px) translateZ(-230px) rotateX(90deg);
+	  -webkit-transform-origin: bottom center;
+			  transform-origin: bottom center;
+	}
+  }
+  @keyframes slide-rotate-hor-b-bck {
+	0% {
+	  -webkit-transform: translateY(0) translateZ(0) rotateX(0deg);
+			  transform: translateY(0) translateZ(0) rotateX(0deg);
+	  -webkit-transform-origin: bottom center;
+			  transform-origin: bottom center;
+	}
+	100% {
+	  -webkit-transform: translateY(150px) translateZ(-230px) rotateX(90deg);
+			  transform: translateY(150px) translateZ(-230px) rotateX(90deg);
+	  -webkit-transform-origin: bottom center;
+			  transform-origin: bottom center;
+	}
+  }
+  
+.flip-scale-up-hor {
+	-webkit-animation: flip-scale-up-hor 0.5s linear both;
+	        animation: flip-scale-up-hor 0.5s linear both;
+}
+
+@-webkit-keyframes flip-scale-up-hor {
+	0% {
+	  -webkit-transform: scale(1) rotateX(0);
+			  transform: scale(1) rotateX(0);
+	}
+	50% {
+	  -webkit-transform: scale(2.5) rotateX(-90deg);
+			  transform: scale(2.5) rotateX(-90deg);
+	}
+	100% {
+	  -webkit-transform: scale(1) rotateX(-180deg);
+			  transform: scale(1) rotateX(-180deg);
+	}
+  }
+  @keyframes flip-scale-up-hor {
+	0% {
+	  -webkit-transform: scale(1) rotateX(0);
+			  transform: scale(1) rotateX(0);
+	}
+	50% {
+	  -webkit-transform: scale(2.5) rotateX(-90deg);
+			  transform: scale(2.5) rotateX(-90deg);
+	}
+	100% {
+	  -webkit-transform: scale(1) rotateX(-180deg);
+			  transform: scale(1) rotateX(-180deg);
+	}
+  }
+  
+  .slide-rotate-hor-b-fwd {
+	-webkit-animation: slide-rotate-hor-b-fwd 2s cubic-bezier(0.455, 0.030, 0.515, 0.955) 1s alternate-reverse both;
+	        animation: slide-rotate-hor-b-fwd 2s cubic-bezier(0.455, 0.030, 0.515, 0.955) 1s alternate-reverse both;
+}
+
+@-webkit-keyframes slide-rotate-hor-b-fwd {
+	0% {
+	  -webkit-transform: translateY(0) translateZ(0) rotateX(0deg);
+			  transform: translateY(0) translateZ(0) rotateX(0deg);
+	  -webkit-transform-origin: top center;
+			  transform-origin: top center;
+	}
+	100% {
+	  -webkit-transform: translateY(150px) translateZ(130px) rotateX(90deg);
+			  transform: translateY(150px) translateZ(130px) rotateX(90deg);
+	  -webkit-transform-origin: top center;
+			  transform-origin: top center;
+	}
+  }
+  @keyframes slide-rotate-hor-b-fwd {
+	0% {
+	  -webkit-transform: translateY(0) translateZ(0) rotateX(0deg);
+			  transform: translateY(0) translateZ(0) rotateX(0deg);
+	  -webkit-transform-origin: top center;
+			  transform-origin: top center;
+	}
+	100% {
+	  -webkit-transform: translateY(150px) translateZ(130px) rotateX(90deg);
+			  transform: translateY(150px) translateZ(130px) rotateX(90deg);
+	  -webkit-transform-origin: top center;
+			  transform-origin: top center;
+	}
+  }
+  
+  /*---*/
+
+  .jello-horizontal:hover {
+	-webkit-animation: jello-horizontal 0.9s both;
+	        animation: jello-horizontal 0.9s both;
+}
+
+@-webkit-keyframes jello-horizontal {
+	0% {
+	  -webkit-transform: scale3d(1, 1, 1);
+			  transform: scale3d(1, 1, 1);
+	}
+	30% {
+	  -webkit-transform: scale3d(1.25, 0.75, 1);
+			  transform: scale3d(1.25, 0.75, 1);
+	}
+	40% {
+	  -webkit-transform: scale3d(0.75, 1.25, 1);
+			  transform: scale3d(0.75, 1.25, 1);
+	}
+	50% {
+	  -webkit-transform: scale3d(1.15, 0.85, 1);
+			  transform: scale3d(1.15, 0.85, 1);
+	}
+	65% {
+	  -webkit-transform: scale3d(0.95, 1.05, 1);
+			  transform: scale3d(0.95, 1.05, 1);
+	}
+	75% {
+	  -webkit-transform: scale3d(1.05, 0.95, 1);
+			  transform: scale3d(1.05, 0.95, 1);
+	}
+	100% {
+	  -webkit-transform: scale3d(1, 1, 1);
+			  transform: scale3d(1, 1, 1);
+	}
+  }
+  @keyframes jello-horizontal {
+	0% {
+	  -webkit-transform: scale3d(1, 1, 1);
+			  transform: scale3d(1, 1, 1);
+	}
+	30% {
+	  -webkit-transform: scale3d(1.25, 0.75, 1);
+			  transform: scale3d(1.25, 0.75, 1);
+	}
+	40% {
+	  -webkit-transform: scale3d(0.75, 1.25, 1);
+			  transform: scale3d(0.75, 1.25, 1);
+	}
+	50% {
+	  -webkit-transform: scale3d(1.15, 0.85, 1);
+			  transform: scale3d(1.15, 0.85, 1);
+	}
+	65% {
+	  -webkit-transform: scale3d(0.95, 1.05, 1);
+			  transform: scale3d(0.95, 1.05, 1);
+	}
+	75% {
+	  -webkit-transform: scale3d(1.05, 0.95, 1);
+			  transform: scale3d(1.05, 0.95, 1);
+	}
+	100% {
+	  -webkit-transform: scale3d(1, 1, 1);
+			  transform: scale3d(1, 1, 1);
+	}
+  }
+  
+  .slide-in-elliptic-right-bck {
+	-webkit-animation: slide-in-elliptic-right-bck 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: slide-in-elliptic-right-bck 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@-webkit-keyframes slide-in-elliptic-right-bck {
+	0% {
+	  -webkit-transform: translateX(800px) rotateY(30deg) scale(6.5);
+			  transform: translateX(800px) rotateY(30deg) scale(6.5);
+	  -webkit-transform-origin: -100% 50%;
+			  transform-origin: -100% 50%;
+	  opacity: 0;
+	}
+	100% {
+	  -webkit-transform: translateX(0) rotateY(0) scale(1);
+			  transform: translateX(0) rotateY(0) scale(1);
+	  -webkit-transform-origin: 600px 50%;
+			  transform-origin: 600px 50%;
+	  opacity: 1;
+	}
+  }
+  @keyframes slide-in-elliptic-right-bck {
+	0% {
+	  -webkit-transform: translateX(800px) rotateY(30deg) scale(6.5);
+			  transform: translateX(800px) rotateY(30deg) scale(6.5);
+	  -webkit-transform-origin: -100% 50%;
+			  transform-origin: -100% 50%;
+	  opacity: 0;
+	}
+	100% {
+	  -webkit-transform: translateX(0) rotateY(0) scale(1);
+			  transform: translateX(0) rotateY(0) scale(1);
+	  -webkit-transform-origin: 600px 50%;
+			  transform-origin: 600px 50%;
+	  opacity: 1;
+	}
+  }
+
+  /*---*/
+
+  .accordionHeader button {
+	padding: 3px 10px 3px 20px;
+	background-color: lightgray;
+  }
